packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-002.ttrp
// expect: TTRP-SQL-002
container c target erp_pg """sql
SELECT TOP 10 id FROM t
"""
